--- a/static/upload.html
+++ b/static/upload.html
@@ -1,14 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Upload</title>
+    <title>Загрузка изображения</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #f5f5f5;
+        }
+        .container {
+            background-color: white;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        h1 {
+            color: #333;
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        .upload-form {
+            margin-bottom: 30px;
+        }
+        .file-input {
+            margin-bottom: 20px;
+        }
+        .buttons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 30px;
+        }
+        .button {
+            display: inline-block;
+            padding: 12px 24px;
+            background-color: #4CAF50;
+            color: white;
+            text-decoration: none;
+            border-radius: 4px;
+            border: none;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s;
+        }
+        .button:hover {
+            background-color: #45a049;
+        }
+        .button.secondary {
+            background-color: #2196F3;
+        }
+        .button.secondary:hover {
+            background-color: #1976D2;
+        }
+        .navigation {
+            margin-top: 20px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-<form method="POST" enctype="multipart/form-data" action="/upload">
-    <input type="file" id="file-upload" name="image" accept=".jpeg,.png,.gif,.jpg">
-    <label for="file-upload">Выберите файл</label>
-    <button type="submit">Загрузить</button>
-</form>
+    <div class="container">
+        <h1>Загрузка изображения</h1>
+        
+        <form action="/upload" method="post" enctype="multipart/form-data" class="upload-form">
+            <div class="file-input">
+                <input type="file" name="image" accept="image/jpeg,image/png,image/gif" required>
+            </div>
+            <div class="buttons">
+                <button type="submit" class="button">Загрузить</button>
+                <a href="/" class="button secondary">На главную</a>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
