--- a/static/all_images.html
+++ b/static/all_images.html
@@ -4,54 +4,17 @@
     <meta charset="UTF-8">
     <title>Все изображения</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/button.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
             max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #f5f5f5;
-        }
-        .container {
-            background-color: white;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-        h1 {
-            color: #333;
-            text-align: center;
-            margin-bottom: 30px;
         }
         #images {
             display: flex;
             flex-wrap: wrap;
             gap: 20px;
             justify-content: center;
-        }
-        .buttons {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin: 30px 0;
-        }
-        .button {
-            display: inline-block;
-            padding: 12px 24px;
-            background-color: #4CAF50;
-            color: white;
-            text-decoration: none;
-            border-radius: 4px;
-            transition: background-color 0.3s;
-        }
-        .button:hover {
-            background-color: #45a049;
-        }
-        .button.secondary {
-            background-color: #2196F3;
-        }
-        .button.secondary:hover {
-            background-color: #1976D2;
         }
         .no-images {
             text-align: center;
