--- a/static/index.html
+++ b/static/index.html
@@ -4,25 +4,10 @@
     <meta charset="UTF-8">
     <title>Сервис хостинга изображений</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="stylesheet" href="/static/button.css">
+    <link rel="stylesheet" href="/static/style.css">
+</head>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #f5f5f5;
-        }
-        .container {
-            background-color: white;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-        h1 {
-            color: #333;
-            text-align: center;
-            margin-bottom: 30px;
-        }
         .description {
             color: #666;
             line-height: 1.6;
@@ -49,30 +34,6 @@
             color: #4CAF50;
             position: absolute;
             left: 0;
-        }
-        .buttons {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 30px;
-        }
-        .button {
-            display: inline-block;
-            padding: 12px 24px;
-            background-color: #4CAF50;
-            color: white;
-            text-decoration: none;
-            border-radius: 4px;
-            transition: background-color 0.3s;
-        }
-        .button:hover {
-            background-color: #45a049;
-        }
-        .button.secondary {
-            background-color: #2196F3;
-        }
-        .button.secondary:hover {
-            background-color: #1976D2;
         }
     </style>
 </head>
