Decomposition of functionality, preparation for database connection

--- a/static/upload_success.html
+++ b/static/upload_success.html
@@ -33,7 +33,7 @@
         }
         .image-url {
             display: block;
-            margin-top: 5p;
+            margin-top: 5px;
             margin: 20px 0;
             padding: 10px;
             background-color: #f8f8f8;
@@ -51,7 +51,7 @@
         <div class="success-message">
             Ваше изображение было успешно загружено на сервер!
         </div>
-        
+
         <div class="image-container">
             <div class="image-preview">
                 <img id="uploaded-image" src="" alt="Загруженное изображение">
