--- a/data/static/index.html
+++ b/data/static/index.html
@@ -12,6 +12,7 @@
             color: #666;
             line-height: 1.6;
             margin-bottom: 30px;
+            text-align: center;
         }
         .features {
             margin-bottom: 30px;
